# physics_reports

./: .gitignore  pyproject.toml  run.sh
src/: polarization.tex
src/interferometer/: main.tex
src/optic_lab/spot_size/: main.tex
src/polarization/: polarization.tex
src/quantum_computing/noise/: citations.bib  main.tex
src/quantum_optics/interferometer/: main.tex
src/quantum_optics/polarization/: polarization.tex
src/quantum_optics/spot_size/: main.tex
src/quantum_optics/waveplate/: main.tex
src/radiation/alpha/data/: air.csv  d1.csv  d2.csv  srim  toron.csv  toron_2.csv  triple_atm_d1.csv  triple_atm_d3.csv  vacuum.csv  vacuum_2.csv
src/radiation/alpha/scripts/: results.py  spec_params.json
src/radiation/gamma/data/: calibration_co.csv  calibration_cs.csv  lead_1.csv  lead_2.csv  lead_3.csv  lead_4.csv  lead_5.csv  lead_6.csv  sum_peak_1.csv  sum_peak_2.csv  sum_peak_3.csv  sum_peak_4.csv  sum_peak_5.csv  sum_peak_6.csv
src/radiation/gamma/scripts/: results.py  spec_params.json
src/radiation/radess_gamma/: citations.bib  main.bbl  main.blg  main.tex
src/radiation/radess_gamma/data/: bgo_co_60  bgo_cs_137  bgo_na_22  hpge_co_60  hpge_cs_137  hpge_na_22  nai_33_co_60  nai_33_cs_137  nai_33_na_22  unknown_source
src/radiation/radess_gamma/scripts/: results.py  spec_params.json
src/spectroscopy/rades_gamma/: main.tex
src/spot_size/: main.tex
src/waveplate/: main.tex
